support html special chars in values

--- a/test/combobox.htm
+++ b/test/combobox.htm
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<p><label for="name">input your name: </label><input name="name" type="text" value="Alice,Bob,Carol,Dave" data-class="FlowerUI.Combobox"/></p>
+<p><label for="name">input your name: </label><input name="name" type="text" value="&lt;Alice&gt;,&amp;Bob,&quot;&quot;&quot;Carol&quot;&quot;&quot;,&#39;Dave&#39;" data-class="FlowerUI.Combobox"/></p>
 
 <script type="text/javascript" src="../dist/flowerui.js"></script>
 
