make combobox go out of document flow

--- a/test/combobox.htm
+++ b/test/combobox.htm
@@ -10,6 +10,8 @@
 
 <p><label for="name">input your name: </label><input name="name" type="text" value="&lt;Alice&gt;,&amp;Bob,&quot;&quot;&quot;Carol&quot;&quot;&quot;,&#39;Dave&#39;" data-class="FlowerUI.Combobox"/></p>
 
+<p>other text text text text text text text text</p>
+
 <script type="text/javascript" src="../dist/flowerui.js"></script>
 
 <script type="text/javascript">
